--- a/voice-recognition/package.json
+++ b/voice-recognition/package.json
@@ -1,28 +1,28 @@
 {
   "name": "vue-voice-recognition",
-  "version": "0.0.2",
-  "main": "./dist/voice-recognition.umd.js",
-  "module": "./dist/voice-recognition.es.js",
+  "version": "0.1.3",
+  "main": "./dist/vue-voice-recognition.umd.js",
+  "module": "./dist/vue-voice-recognition.es.js",
   "files": [
     "dist"
   ],
   "exports": {
     ".": {
-      "import": "./dist/voice-recognition.es.js",
-      "require": "./dist/voice-recognition.umd.js"
+      "import": "./dist/vue-voice-recognition.es.js",
+      "require": "./dist/vue-voice-recognition.umd.js"
     }
   },
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "rollup -c",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "vue": "^3.2.41"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^3.2.0",
+    "@vitejs/plugin-vue": "^4.0.0",
     "vite": "^3.2.3"
   }
 }
